--- a/packages/rt-arkts/oh-package.json5
+++ b/packages/rt-arkts/oh-package.json5
@@ -2,7 +2,8 @@
   "modelVersion": "5.0.4",
   "description": "Please describe the basic information.",
   "dependencies": {
-    "@ohos/axios": "^2.2.6"
+    "@ohos/axios": "^2.2.6",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
