--- a/packages/designer/package.json
+++ b/packages/designer/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "mybricks-cli": "^0.0.41",
+    "mybricks-cli": "0.0.42",
     "typescript": "^5.3.3",
     "ts-loader": "^9.5.2"
   },
