--- a/packages/rt-arkts/comlib/oh-package.json5
+++ b/packages/rt-arkts/comlib/oh-package.json5
@@ -8,7 +8,8 @@
   "dependencies": {
     "dayjs": "1.11.13",
     "@ohos/axios": "2.2.6",
-    "@mybricks/render-utils": "1.0.13"
+    "@mybricks/render-utils": "1.0.13",
+    "@aliyun/oss": "latest"
   },
   "devDependencies": {}
 }
