--- a/packages/rt-arkts/oh-package.json5
+++ b/packages/rt-arkts/oh-package.json5
@@ -3,7 +3,8 @@
   "description": "Please describe the basic information.",
   "dependencies": {
     "@ohos/axios": "^2.2.6",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "@aliyun/oss": "latest"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
