--- a/packages/rt-arkts/comlib/oh-package.json5
+++ b/packages/rt-arkts/comlib/oh-package.json5
@@ -8,7 +8,7 @@
   "dependencies": {
     "dayjs": "1.11.13",
     "@ohos/axios": "2.2.6",
-    "@mybricks/render-utils": "1.0.15",
+    "@mybricks/render-utils": "latest",
     "@aliyun/oss": "latest"
   },
   "devDependencies": {}
