--- a/packages/rt-arkts/oh-package.json5
+++ b/packages/rt-arkts/oh-package.json5
@@ -4,7 +4,8 @@
   "dependencies": {
     "@ohos/axios": "^2.2.6",
     "dayjs": "^1.11.13",
-    "@aliyun/oss": "latest"
+    "@aliyun/oss": "latest",
+    "@mybricks/render-utils": "latest"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
