--- a/packages/rt-arkts/oh-package.json5
+++ b/packages/rt-arkts/oh-package.json5
@@ -5,7 +5,8 @@
     "@ohos/axios": "^2.2.6",
     "dayjs": "^1.11.13",
     "@aliyun/oss": "latest",
-    "@mybricks/render-utils": "latest"
+    "@mybricks/render-utils": "latest",
+    "libavinnerrecord": "latest"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
